# wm_kinova_hardware_interface

./: CMakeLists.txt  README.md  install.sh  package.xml  wm_kinova_hw_plugin.xml
config/: sara_arm_parametres.yaml
include/: WMKinovaApiWrapper.h  WMKinovaHardwareInteface.h  WMKinovaHardwareInterface.h
launch/: desjardins.launch
sara_arm/: CMakeLists.txt  package.xml  wm_kinova_hw_plugin.xml
sara_arm/config/: sara_arm_parametres.yaml
sara_arm/include/sara_arm/: kinova_hardware_interface.h  sara_arm.h  sara_arm_hardware_interface.h  sara_arm_kinova_motors.h
sara_arm/launch/: kinova_driver.launch  kinova_driver_teleop.launch  sara_arm_control.launch
sara_arm/src/: WMKinovaHardwareInteface.cpp  kinova_hardware_interface.cpp  sara_arm.cpp  sara_arm_hardware_interface.cpp  sara_arm_kinova_motors.cpp  sara_arm_teleop.py  sara_arm_test.cpp  sara_simple_kinova_teleop.cpp
sara_arm/src/Lib/: kinova_hardware_interface.h  sara_arm.h  sara_arm_hardware_interface.h
src/: WMKinovaApiWrapper.cpp  WMKinovaHardwareInteface.cpp  WMKinovaHardwareInterface.cpp  WMKinovaHardwarerInterface.cpp
