<?xml version="1.0"?>
<package>
  <name>wm_kinova_hardware_interface</name>
  <version>1.0.0</version>
  <description>The sara_arm package</description>
  <maintainer email="philippe.la-madeleine.1@ens.etsmtl.ca">PhilLM</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/WalkingMachine/sara_robot</url> -->


  <author email="philippe.la-madeleine.1@ens.etsmtl.ca">Philippe La Madeleine</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>kinova_driver</build_depend>
  <run_depend>kinova_driver</run_depend>

  <build_depend>hardware_interface</build_depend>
  <run_depend>hardware_interface</run_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <build_depend>joy</build_depend>
  <run_depend>joy</run_depend>

  <build_depend>pluginlib</build_depend>
  <run_depend>pluginlib</run_depend>


  <build_depend>combined_robot_hw</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_manager_tests</build_depend>

  <run_depend>combined_robot_hw</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_manager_tests</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <hardware_interface plugin="${prefix}/wm_kinova_hw_plugin.xml"/>
  </export>
</package>
